* New screens in Settings
* Notifications
* New themes
* Favorite matches
* Faster image animations
* UI updates
* Localization updates
* Lots of code refactors
* Upgrade dependencies