@@ -5,5 +5,6 @@
 * Faster image animations
 * UI updates
 * Localization updates
+* Update empty & error UIs
 * Lots of code refactors
 * Upgrade dependencies
